--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="5"
+    android:weightSum="7"
     tools:context="com.example.sami.calculatorpractice.MainActivity">
 
     <TextView
         android:id="@+id/mainDisplay"
-        android:layout_width="351dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="2"
+        android:background="@android:drawable/btn_default"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#888888" />
+        android:textColor="#888888"
+        android:textSize="40dp"
+        android:gravity="center_vertical"
+        android:textAlignment="textEnd"
+        android:clickable="false" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,30 +36,37 @@
         <Button
             android:id="@+id/BCE"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="CE" />
+            android:text="CE"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BPlusMinus"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="-/+" />
+            android:text="-/+"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BDisabled"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="%" />
+            android:text="%"
+            android:textSize="@dimen/general_button_size"
+            android:clickable="false"
+            android:enabled="false" />
 
         <Button
             android:id="@+id/BDel"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="DEL" />
+            android:text="DEL"
+            android:textSize="@dimen/general_button_size"
+            android:enabled="true" />
     </LinearLayout>
 
     <LinearLayout
@@ -67,30 +79,34 @@
         <Button
             android:id="@+id/B01"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="1" />
+            android:text="1"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B02"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="2" />
+            android:text="2"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B03"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="3" />
+            android:text="3"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BPlus"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="+" />
+            android:text="+"
+            android:textSize="@dimen/general_button_size" />
     </LinearLayout>
 
     <LinearLayout
@@ -103,30 +119,34 @@
         <Button
             android:id="@+id/B04"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="4" />
+            android:text="4"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B05"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="5" />
+            android:text="5"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B06"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="6" />
+            android:text="6"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BMinus"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="-" />
+            android:text="-"
+            android:textSize="@dimen/general_button_size" />
     </LinearLayout>
 
     <LinearLayout
@@ -139,30 +159,34 @@
         <Button
             android:id="@+id/B07"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="7" />
+            android:text="7"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B08"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="8" />
+            android:text="8"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B09"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="9" />
+            android:text="9"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BMultiply"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="*" />
+            android:text="*"
+            android:textSize="@dimen/general_button_size" />
     </LinearLayout>
 
     <LinearLayout
@@ -175,29 +199,33 @@
         <Button
             android:id="@+id/BDot"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="." />
+            android:text="."
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/B00"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="0" />
+            android:text="0"
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BEqual"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="=" />
+            android:text="="
+            android:textSize="@dimen/general_button_size" />
 
         <Button
             android:id="@+id/BDivide"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="/" />
+            android:text="/"
+            android:textSize="@dimen/general_button_size" />
     </LinearLayout>
 </LinearLayout>
