--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,14 +50,13 @@
             android:textSize="@dimen/general_button_size" />
 
         <Button
-            android:id="@+id/BDisabled"
+            android:id="@+id/BPercentage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="%"
+            android:text="Lay"
             android:textSize="@dimen/general_button_size"
-            android:clickable="false"
-            android:enabled="false" />
+             />
 
         <Button
             android:id="@+id/BDel"
